# lingo

./: .gitignore  .prettierrc.json  BUILDING.md  Cargo.toml  README.md  bun.lockb  package.json
.github/: FUNDING.yml
.github/workflows/: release.yml
desktop/: bun.lockb  index.html  package.json  vite.config.ts
desktop/src/: App.tsx  config.ts  main.tsx  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/locales/en-US/: common.json  language.json
desktop/src-tauri/locales/he-IL/: common.json  language.json
desktop/src-tauri/src/: cmd.rs  main.rs  unzip.rs
desktop/src/assets/: languages.json
desktop/src/components/: AlignedTextArea.tsx  LanguageInput.tsx
desktop/src/lib/: i18n.ts  utils.ts
desktop/src/pages/: Home.tsx  Settings.tsx  Setup.tsx
desktop/src/providers/: PreferenceProvider.tsx
scripts/: pre_build.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  downloader.rs  main.rs
src/assets/: languages.json
src/components/: Download.tsx
src/pages/: Home.tsx  Settings.tsx  Setup.tsx
